--- a/2주차/2주차_박은주.md
+++ b/2주차/2주차_박은주.md
@@ -54,7 +54,7 @@ aliases: []
 	![클래스다이어그램](https://velog.velcdn.com/images%2Fwoo0_hooo%2Fpost%2F1121f703-d68b-4010-817c-9f5707d8761c%2F_2021-01-21__6.26.58.png)
 + 객체 다이어그램
 	+ 실제가 서버 동작시 생성한 인스턴스끼리의 참조를 표현한 그림
-	+ 동적인 그
+	+ 동적인 그림
 	![객체다이어그램](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbRyfKk%2Fbtsex3KbNVd%2FDl4BWRKtHJvm4PuggiJJ31%2Fimg.png)
 
 3. 회원 도메인 개발 및 테스트
