--- a/4주차/4주차_박은주.md
+++ b/4주차/4주차_박은주.md
@@ -38,6 +38,7 @@ aliases: []
 			+ value : 객체
 			+ `@Bean(name="memberService2")` 이렇게 빈 이름을 직접 지정할 수도 있으나 **절대 중복된 이름을 사용해서는 안됨**
 		+ **설정 정보를 참고해서 의존관계를 주입함**
+		    + AppConfig.java가 설정 정보 
 
 2. BeanFactory와 ApplicationContext
 	<img src="https://3513843782-files.gitbook.io/~/files/v0/b/gitbook-legacy-files/o/assets%2F-LxjHkZu4T9MzJ5fEMNe%2Fsync%2F21012b333f698d2d366ad35304db7e559cd641d9.png?generation=1618052456312074&alt=media" width="500px" height="600px">
