--- a/4주차/4주차_박은주.md
+++ b/4주차/4주차_박은주.md
@@ -51,7 +51,8 @@ aliases: []
 		+ ApplicationContext 추가 기능
 			+ **EnvironmentCapable**
 				+ 로컬, 개발, 운영등으로 구분해서 환경변수 처리
-			+ 애플리케이션 이벤트(ListableBeanFactory)
+			+ ListableBeanFactory
+			         + 애플리케이션 이벤트 
 			+ HierarchicalBeanFactory
 				+ BeanFactory 의해 구현된 하위 인터페이스
 			+ **MessageSource**
