--- a/4주차/4주차_박은주.md
+++ b/4주차/4주차_박은주.md
@@ -34,10 +34,12 @@ aliases: []
 			new AnnotationConfigApplicationContext(AppConfig.class);
 		```
 		+ **파라미터로 넘어온 클래스 정보에서 @Bean이 붙은 메소드의 이름으로 빈 목록을 생성**
+				![스프링컨테이너](https://hongchangsub.com/content/images/2021/08/-----------2021-08-10-------11.18.32.png)
 			+ key : 메소드명
 			+ value : 객체
 			+ `@Bean(name="memberService2")` 이렇게 빈 이름을 직접 지정할 수도 있으나 **절대 중복된 이름을 사용해서는 안됨**
 		+ **설정 정보를 참고해서 의존관계를 주입함**
+			+ AppConfig.java가 설정 정보
 
 2. BeanFactory와 ApplicationContext
 	<img src="https://3513843782-files.gitbook.io/~/files/v0/b/gitbook-legacy-files/o/assets%2F-LxjHkZu4T9MzJ5fEMNe%2Fsync%2F21012b333f698d2d366ad35304db7e559cd641d9.png?generation=1618052456312074&alt=media" width="500px" height="600px">
@@ -50,7 +52,8 @@ aliases: []
 		+ ApplicationContext 추가 기능
 			+ **EnvironmentCapable**
 				+ 로컬, 개발, 운영등으로 구분해서 환경변수 처리
-			+ 애플리케이션 이벤트(ListableBeanFactory)
+			+ ListableBeanFactory
+				+ 애플리케이션 이벤트
 			+ HierarchicalBeanFactory
 				+ BeanFactory 의해 구현된 하위 인터페이스
 			+ **MessageSource**
@@ -68,9 +71,51 @@ aliases: []
 					, ApplicationEventPublisher
 					, ResourcePatternResolve
 			```
+			
+> 스프링 빈
+> + 스프링 컨테이너가 관리하는 자바 객체
 
-		
-3. 컨테이너에 등록된 모든 빈 조회
+3. **BeanDefinition**
+	+ **스프링 빈 설정 메타정보**
+	+ **인터페이스이기 때문에 설정 파일이 자바이거나 XML이여도 상관없음**
+	![이미지](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbNLila%2Fbtrcp1UILQ0%2FVkhxLZQXfcye1m2Lpfcunk%2Fimg.png)
+	+ 스프링 컨테이너는 이 메타 정보를 기반으로 스프링 빈을 생성
+	+ `@Bean`당 각각 하나씩 메타 정보 생성됨
+	+ Role
+		+ 어디서 등록된것인지 확인하는 용도
+		+ ROLE_APPLICATION : 직접 등록한 애플리케이션 빈
+		+ ROLE_INFRASTRUCTURE : 스프링이 내부에서 사용하는 빈
+		```
+		public interface BeanDefinition extends 
+			AttributeAccessor, BeanMetadataElement {
+			...
+			int ROLE_APPLICATION = 0;
+			int ROLE_SUPPORT = 1;
+			int ROLE_INFRASTRUCTURE = 2;
+			...
+		```
+	+ 메타 정보
+		+ BeanClassName
+			+ 생성할 빈의 클래스명
+			+ 자바 설정 처럼 팩토리 역할의 빈을 사용하면 없음 
+		+ factoryBeanName
+			+ 팩토리 역할의 빈을 사용할 경우 이름 
+			+ 예) appConfig 
+		+ factoryMethodName
+			+ 빈을 생성할 팩토리 메서드 지정
+			+ 예) memberService 
+		+ Scope 
+			+ 싱글톤(기본값)
+		+ lazyInit
+			+ 스프링 컨테이너를 생성할 때 빈을 생성하는 것이 아니라, 실제 빈을 사용할 때 까지 최대한 생성을 지연처리 하는지 여부 
+		+ InitMethodName
+			+ 빈을 생성하고, 의존관계를 적용한 뒤에 호출되는 초기화 메서드 명 
+		+ DestroyMethodName
+			+ 빈의 생명주기가 끝나서 제거하기 직전에 호출되는 메서드 명 
+		+ Constructor arguments, Properties
+			+ 의존관계 주입에서 사용함
+			+ 자바 설정 처럼 팩토리 역할의 빈을 사용하면 없음		
+4. 컨테이너에 등록된 모든 빈 조회
 	+ AppConfing 등록하지 않은 빈까지 다 출력됨
 	```
 	@Test  
@@ -97,7 +142,7 @@ aliases: []
 
 	```
 
-4. 스프링 빈 조회
+5. 스프링 빈 조회
 	+ **실제 개발시 스프링 빈을 직접 조회할 일은 없지만 가끔 순수 자바에서 스프링 컨테이너 생성해서 써야하는 경우가 있을수도 있기 때문에 알아두면 좋음**
 	+ 기본
 		+ `getBean()` 이용하여 이름 또는 타입으로 조회 할 수 있음
@@ -180,35 +225,16 @@ aliases: []
 	}
 	 ```
 
-5. 다양한 설정 형식 지원
-	+ XML, Groovy 등을 지원하지만 스프링 부트를 많이 사용하면서 XML기반으로 설정하지 않음
-6. **BeanDefinition**
-	+ **스프링 빈 설정 메타정보**
-	+ **인터페이스이기 때문에 설정 파일이 자바이거나 XML이여도 상관없음**
-	![이미지](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbNLila%2Fbtrcp1UILQ0%2FVkhxLZQXfcye1m2Lpfcunk%2Fimg.png)
-	+ 스프링 컨테이너는 이 메타 정보를 기반으로 스프링 빈을 생성
-	+ `@Bean`당 각각 하나씩 메타 정보 생성됨
-	+ Role
-		+ 어디서 등록된것인지 확인하는 용도로 
-		+ ROLE_APPLICATION : 직접 등록한 애플리케이션 빈
-		+ ROLE_INFRASTRUCTURE : 스프링이 내부에서 사용하는 빈
-		```
-		public interface BeanDefinition extends 
-			AttributeAccessor, BeanMetadataElement {
-			...
-			int ROLE_APPLICATION = 0;
-			int ROLE_SUPPORT = 1;
-			int ROLE_INFRASTRUCTURE = 2;
-			...
-		```
-	
+6. 다양한 설정 형식 지원
+	+ XML, Groovy 등을 지원하지만 스프링 부트를 많이 사용하면서 XML기반으로 설정하지 않음	 
+
 #### 출처(참고문헌)
 + 스프링핵심원리
 + https://velog.io/@max9106/Spring-ApplicationContext
 + https://mangkyu.tistory.com/151
 + https://beststar-1.tistory.com/39
 + https://stackoverflow.com/questions/63848254/what-is-role-in-spring-bean
-
++ https://ittrue.tistory.com/221
 #### 연결문서
 + 003_스프링핵심원리이해2
 
