--- a/5주차/5주차_박은주.md
+++ b/5주차/5주차_박은주.md
@@ -58,7 +58,6 @@ aliases: []
 	> 안티패턴(Anti-pattern)
 	> + 습관적으로 많이 사용하지만 유지보수나 가독성 측면에서 **부정적인 영향을 줄 수 있어 지양하는 패턴**
 	
-	+ 다른 싱글톤 패턴 구현하는 방법 찾아보기
 	+ 싱글톤 패턴 구현
 	```
 	public class SingletonService {  
@@ -200,7 +199,7 @@ aliases: []
 		  
 		@Bean  
 		public DiscountPolicy discountPolicy() {  
-			System.out.println("discountPolicy() 호출");  
+			System.out.println("discountPolicy() 호출");
 			return new FixDiscountPolicy();  
 		}  
 	}
@@ -223,7 +222,7 @@ aliases: []
 	+ **@Bean만 사용해도 스프링 빈으로 등록되지만 싱글톤은 보장되지 않음**
 
 > CGLIB
-> + 클래스 기반으로 바이트코드를 조작해서 Proxy를 생성하는 방
+> + 클래스 기반으로 바이트코드를 조작해서 Proxy를 생성하는 방식
 
 #### 출처(참고문헌)
 + 스프링핵심원리
