--- a/5주차/5주차_고현아.md
+++ b/5주차/5주차_고현아.md
@@ -26,13 +26,52 @@
     ```
     <h1> aaa [[${msg}]] bbb </h1>
     ```
+	- 이외 타임리프 사용법
+	```
+	<!-- 지역변수 -->
+	<div th:with="a=1,b=2">
+	    <a th:text="|${a}+${b}=${a+b}|"></a>
+	</div>
+	
+	
+	<!-- 삼항연산 -->
+	<p th:text="${aaa} == 1 ? 'true' : 'false'"></p>
+	
+	
+	<!-- if-else -->
+	<div th:if="${aaa} == 1">
+	    aaa는 1
+	</div>
+	<div th:unless="${aaa} == 1">
+	    aaa가 1이 아님
+	</div>
+	
+	
+	<!-- switch-case -->
+	<div th:switch="${aaa}">
+	    <p th:case="bbb"></p>
+		<p th:case="*"></p>
+	</div>
+	
+	
+	<!-- 참조 -->
+	<p th:text="${member.id}"></p>
+	<p th:text="${member['id']}"></p>
+	<p th:text="${member.getId()}"> member 내 메소드 호출 가능 </p>
+	
+	
+	<!-- 반복 -->
+    <div th:each="member, sts : ${mdArr}">
+        [[${member.id}]] [[${member.name}]] <br>
+        index: [[${sts.index}]] <br>
+		상태변수(sts) index, count, size, current, even, odd, first, last
+    </div>
+	```
+
+<br>
+<br>
 <br>
 
-#### 2. 
- 1) 
-  
-<br>
-<br>
 ---
 ### <기타>
 - 새니타이즈(Sanitize): 위험한 코드, 데이터를 변환/제거 하여 무력화하는 것
