--- a/5주차/5주차_고현아.md
+++ b/5주차/5주차_고현아.md
@@ -4,8 +4,11 @@
 
 ### 스프링 프레임워크 핵심 기능
 #### 1. 타임리프(탬플릿 엔진)
- 1) 기존 JSP는 개발 도중에 브라우저상에서 내용을 확인하기 어려웠지만, 타임리프로 서버 기동 없이 확인 가능  
-    (templates/*.html 우클릭 → Open In → Browser)  
+ 1) 기존 JSP는 개발 도중에 브라우저상에서 내용을 확인하기 어려웠지만(?), 타임리프로 서버 기동 없이 확인 가능  
+    (templates\*.html 우클릭 → Open In → Browser)  
+    → 반복문 등 서버 처리가 필요한 부분들은 볼 수 없음(JSP와 동일)  
+    → 화면을 보기 위해 별도의 브라우저 창을 열 필요 없이, 개발 툴 내에서 확인할 수 있다는 게 장점이라는 듯
+    
  2) html 설정
  ```
  <!-- 타임리프 사용 선언 -->
@@ -17,6 +20,7 @@
 	 </body>
  </html>
  ```
+ 
  3) 속성  
     - th:text  속성에 지정된 값을 새니타이즈(Sanitize)하여 출력  
     - th:utext 속성에 지정된 값을 출력  
@@ -64,7 +68,7 @@
     <div th:each="member, sts : ${mdArr}">
         [[${member.id}]] [[${member.name}]] <br>
         index: [[${sts.index}]] <br>
-		상태변수(sts) index, count, size, current, even, odd, first, last
+	상태변수(sts) index, count, size, current, even, odd, first, last
     </div>
 	```
 
