--- a/5주차/5주차_고현아.md
+++ b/5주차/5주차_고현아.md
@@ -71,7 +71,15 @@
 	상태변수(sts) index, count, size, current, even, odd, first, last
     </div>
 	```
-
+	
+ 4) 유틸리티 객체
+   타임리프는 자주 사용되는 클래스들을 상수로 정의(#이름)하고 있어서 문자열 포맷 변환 등 활용 가능  
+   #strings, #numbers, #bools, #dates, #objects, #arrays, #lists, #sets, #maps
+   ```
+   <div th:with="today=${#dates.createNow()}">
+   <p th:text="${#strings.isEmpty(msg)}">
+   ```  
+   
 <br>
 <br>
 <br>
