--- a/5주차/5주차_박은주.md
+++ b/5주차/5주차_박은주.md
@@ -8,12 +8,11 @@ aliases: []
 ---
 
 #### 목차
-+ 웹 애플리케이션과 싱글톤
++ 싱글톤 미적용시 문제점
 + 싱글톤 패턴
 + 싱글톤 컨테이너
 + 싱글톤 방식의 주의점
 + @Configuration과 싱글톤
-+ @Configuration과 바이트코드 조작의 마법
 
 #### 학습내용
 1. 싱글톤 미적용시 문제점
@@ -95,7 +94,7 @@ aliases: []
 	+ 스프링의 기본 빈 등록 방식은 싱글톤이지만 다른 방식도 가능
 
 4. 싱글톤 방식의 주의점
-	+ 스프링 빈은 항상 **무상태(stateless)** 로 설계해야됨(공유 필드 조심)
+	+ 스프링 빈은 항상 **무상태(stateless)**로 설계해야됨(공유 필드 조심)
 	+ 문제점 발생
 	```
 	public class StatefulService {
@@ -199,7 +198,7 @@ aliases: []
 		  
 		@Bean  
 		public DiscountPolicy discountPolicy() {  
-			System.out.println("discountPolicy() 호출");
+			System.out.println("discountPolicy() 호출");  
 			return new FixDiscountPolicy();  
 		}  
 	}
