--- a/6주차/6주차_박은주.md
+++ b/6주차/6주차_박은주.md
@@ -9,10 +9,7 @@ aliases: []
 
 #### 목차
 + 컴포넌트 스캔과 의존관계 자동 주입 시작하기
-+ 탐색 위치와 기본 스캔 대상
-+ 필터
-+ 중복 등록과 충돌
-
++ @ComponentScan
 #### 학습내용
 1. 컴포넌트 스캔과 의존관계 자동 주입 시작하기
 ```
