--- a/7주차/7주차_박은주.md
+++ b/7주차/7주차_박은주.md
@@ -29,8 +29,8 @@ aliases: []
 		```
 		@Autowired 
 		public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) { 
-		this.memberRepository = memberRepository; 
-		this.discountPolicy = discountPolicy; 
+			this.memberRepository = memberRepository; 
+			this.discountPolicy = discountPolicy; 
 		}
 		```
 	+ setter 주입
@@ -70,9 +70,8 @@ aliases: []
 		+ **의존관계 주입시 더 명확하게 하기 위해서 이름을 지정**
 		```
 		@Autowired 
-		public OrderServiceImpl(
-			MemberRepository memberRepository, @Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy
-			) { 
+		public OrderServiceImpl(MemberRepository memberRepository, 
+							@Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) { 
 				this.memberRepository = memberRepository; 
 				this.discountPolicy = discountPolicy; 
 		}
