7주차 결과물 제출

--- a/7주차/7주차_박은주.md
+++ b/7주차/7주차_박은주.md
@@ -1,6 +1,6 @@
 ---
 created: 2023-06-06
-title: 007_의존관계자동주입
+title: 008_빈생명주기콜백
 author: pej
 category: 스프링핵심원리
 tag: 인프런, 스프링핵심원리, Spring
@@ -8,96 +8,249 @@ aliases: []
 ---
 
 #### 목차
-+ @Autowried
-+ 다양한 의존관계 주입 방법
-+ @Autowried required 옵션
-+ @Autowried 의존관계 주입시 빈 중복 해결 방법
++ 빈 생명주기 콜백 시작
++ 인터페이스 InitializingBean, DisposableBean
++ 빈 등록 초기화, 소멸 메소드
++ 어노테이션 @PostConstruct, @PreDestory
 
 #### 학습내용
-1. [@Autowired](https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/beans/factory/annotation/Autowired.html)
-	+ **스프링 컨테이너가 자동으로 해당 스프링 빈을 찾아서 의존관계 주입해줌**
+1. 스프링 빈 생명주기
 
-2. 다양한 의존관계 주입 방법
-	+ 생성자 주입
-		+ **스프링 빈 생성과 동시에 의존관계도 주입됨**
-		+ **생성자 호출시점에 1번만 호출됨**
-		+ 스프링 빈인 경우에만 생성자가 1개만 있는 경우 `@Autowired`가 없어도 자동 주입이 됨
-		+ 장점
-			+ final을 붙일 수 있기 때문에 외부에서 해당 빈을 함부로 변경할 수 없음
-		+ 단점
-			+ **@Autowired(required=false)** 등으로 유동적으로 의존관계를 주입 할 수 없음
+	![스프링빈생명주기](https://blog.kakaocdn.net/dn/lBNdx/btrcoldVzXF/iWE28PSS8u363k6EsrWMx1/img.png)
+
+	+ **스프링 컨테이너 생성**
+	+ **스프링 빈 생성 의존관계 주입**
+	+ **초기화 콜백 사용**
+	+ **소멸전 콜백**
+	+ **스프링 종료**
+
+> + 초기화 콜백: 빈이 생성되고, 빈의 의존관계 주입이 완료된 후 호출 
+> + 소멸전 콜백: 빈이 소멸되기 직전에 호출
+
+2. 스프링 빈 생명주기 콜백 방법
+	+ 인터페이스 InitializingBean, DisposableBean
+		+ 스프링에서만 사용 할 수 있음
+		+ 스프링 초창기에 나오는 방법으로 지금은 거의 사용하지 않는 방법
 		```
-		@Autowired 
-		public OrderServiceImpl(MemberRepository memberRepository, DiscountPolicy discountPolicy) { 
-			this.memberRepository = memberRepository; 
-			this.discountPolicy = discountPolicy; 
+		package hello.core.lifecycle;
+		
+		import org.springframework.beans.factory.DisposableBean;
+		import org.springframework.beans.factory.InitializingBean;
+		
+		public class BeanLifeCycle2 implements InitializingBean, DisposableBean {
+		
+		    private String name;
+		
+		    public BeanLifeCycle2() {
+		        System.out.println("### BeanLifeCycle2 생성자 호출 ###");
+		        init();
+		    }
+		
+		    public void setName(String name) {
+		        this.name = name;
+		    }
+		
+		    public void init() {
+		        System.out.println("### BeanLifeCycle2 - init ###");
+		        System.out.println("name = " + name);
+		    }
+		
+		    public void close() {
+		        System.out.println("### BeanLifeCycle2 - close ###");
+		    }
+		
+		    @Override
+		    public void afterPropertiesSet() throws Exception {
+		        System.out.println("### BeanLifeCycle2 - afterPropertiesSet ###");
+		        init();
+		    }
+		
+		    @Override
+		    public void destroy() throws Exception {
+		        System.out.println("### BeanLifeCycle2 - destroy ###");
+		        close();
+		    }
 		}
 		```
-	+ setter 주입
-		+ 소스상에 `MemberRepository`가 스프링 빈으로 등록되지 않아도 의존관계 주입이 가능함
 		```
-		@Autowired 
-		public void setMemberRepository(MemberRepository memberRepository) { 
-			this.memberRepository = memberRepository; 
+		@Bean  
+		public BeanLifeCycle2 beanLifeCycle2() {  
+			BeanLifeCycle2 beanLifeCycle2 = new BeanLifeCycle2();  
+			beanLifeCycle2.setName("beanLifeCycle2");  
+			return beanLifeCycle2;  
 		}
 		```
-	+ 필드 주입
-		+ 코드가 간결하지만 스프링 컨테이너를 테스트에 통합한 경우에만 확인 할 수 있음
-		+ `@Configuration` 같은 곳에서만 특별한 용도로 사용할것
-		+ 권장하지 않는 방식
 		```
-		@Autowired 
-		private MemberRepository memberRepository;
+		@Test  
+		@DisplayName("인터페이스 InitializingBean, DisposableBean")  
+		public void lifeCycleTest2() {  
+			ConfigurableApplicationContext ac = new AnnotationConfigApplicationContext(LifeCycleConfig.class);  
+			BeanLifeCycle2 beanLifeCycle2 = ac.getBean(BeanLifeCycle2.class);  
+			ac.close();  
+		}
+		[실행결과]
+		### BeanLifeCycle2 생성자 호출 ###
+		### BeanLifeCycle2 - init ###
+		name = null
+		### BeanLifeCycle2 - afterPropertiesSet ###
+		### BeanLifeCycle2 - init ###
+		name = beanLifeCycle2
+		01:44:07.171 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Closing org.springframework.context.annotation.AnnotationConfigApplicationContext@659a969b, started on Sun Jun 18 01:44:06 KST 2023
+		### BeanLifeCycle2 - destroy ###
+		### BeanLifeCycle2 - close ###
 		```
-	+ 일반 메서드 주입
-		+ 일반적으로 잘 사용하지 않음
+	+ 설정 정보에 초기화 메서드, 종료 메서드 지정
+		+ `@Bean`의 `initMethod`, `destroyMethod` 속성을 이용
+		+ `initMethod`
+			+ 기본값 : 공백
+		+ `destroyMethod`
+			+ 기본값 : 추론
+			+ `String destroyMethod() default AbstractBeanDefinition.INFER_METHOD;`
+			+ **close 또는 shutdown 이라는 메서드를 자동으로 호출해줌**
 		```
-		@Autowired 
-		public void init(MemberRepository memberRepository, DiscountPolicy discountPolicy) { 
-			this.memberRepository = memberRepository; 
-			this.discountPolicy = discountPolicy; 
+		package hello.core.lifecycle;
+
+		import org.springframework.beans.factory.DisposableBean;
+		import org.springframework.beans.factory.InitializingBean;
+		
+		public class BeanLifeCycle3 {
+		
+		    private String name;
+		
+		    public BeanLifeCycle3() {
+		        System.out.println("### BeanLifeCycle3 생성자 호출 ###");
+		        init();
+		    }
+		
+		    public void setName(String name) {
+		        this.name = name;
+		    }
+		
+		    public void init() {
+		        System.out.println("### BeanLifeCycle3 - init ###");
+		        System.out.println("name = " + name);
+		    }
+		
+		    public void close() {
+		        System.out.println("### BeanLifeCycle3 - close ###");
+		        System.out.println("name = " + name);
+		    }
 		}
 		```
-
-3. @Autowried required 옵션
-	+ `@Autowired`는 기본적으로 주입할 대상이 없으면 에러가 발생함
-	+ 주입할 대상이 없어도 동작하게 하려면 **@Autowired(required=false)** 로 지정하면 됨
-	+ 기본값 : true
-
-4. @Autowried 의존관계 주입시 빈 중복 해결 방법
-	+ `@Autowired`은 기본적으로 타입으로 찾고 다건이 나오면 이름으로 찾음
-	+ `@Qualifier` 이용
-		+ **의존관계 주입시 더 명확하게 하기 위해서 이름을 지정**
 		```
-		@Autowired 
-		public OrderServiceImpl(MemberRepository memberRepository, 
-							@Qualifier("mainDiscountPolicy") DiscountPolicy discountPolicy) { 
-				this.memberRepository = memberRepository; 
-				this.discountPolicy = discountPolicy; 
+		@Bean(initMethod = "initBeanLifeCycle", destroyMethod = "close")  
+		public BeanLifeCycle3 beanLifeCycle3() {  
+			BeanLifeCycle3 beanLifeCycle3 = new BeanLifeCycle3();  
+			beanLifeCycle3.setName("beanLifeCycle3");  
+			return beanLifeCycle3;  
 		}
 		```
-	+ `@Primary` 이용
-		+ 스프링 빈에 우선권을 부여
-		+ `@Qualifier`보다 낮음
 		```
-		@Component 
-		@Primary 
-		public class RateDiscountPolicy implements DiscountPolicy {}
+		@Test  
+		@DisplayName("설정 정보에 초기화 메서드, 종료 메서드 지정")  
+		public void lifeCycleTest3() {  
+			ConfigurableApplicationContext ac = new AnnotationConfigApplicationContext(LifeCycleConfig.class);  
+			BeanLifeCycle3 beanLifeCycle3 = ac.getBean(BeanLifeCycle3.class);  
+			ac.close();  
+		}
+		[실행결과]
+		### BeanLifeCycle3 생성자 호출 ###
+		### BeanLifeCycle3 - init ###
+		name = null
+		### BeanLifeCycle3 - init ###
+		name = beanLifeCycle3
+		01:47:07.416 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Closing org.springframework.context.annotation.AnnotationConfigApplicationContext@659a969b, started on Sun Jun 18 01:47:07 KST 2023
+		### BeanLifeCycle3 - close ###
 		```
+		+ `@Bean`만 사용한 경우에도 close() 메서드가 호출된것을 알 수 있음
+		```
+		@Bean
+		public BeanLifeCycle3 beanLifeCycle3() {  
+			BeanLifeCycle3 beanLifeCycle3 = new BeanLifeCycle3();  
+			beanLifeCycle3.setName("beanLifeCycle3");  
+			return beanLifeCycle3;  
+		}
+		```
+		```
+		@Test  
+		@DisplayName("설정 정보에 초기화 메서드, 종료 메서드 지정")  
+		public void lifeCycleTest3() {  
+			ConfigurableApplicationContext ac = new AnnotationConfigApplicationContext(LifeCycleConfig.class);  
+			BeanLifeCycle3 beanLifeCycle3 = ac.getBean(BeanLifeCycle3.class);  
+			ac.close();  
+		}
+		[실행결과]
+		### BeanLifeCycle3 생성자 호출 ###
+		### BeanLifeCycle3 - init ###
+		name = null
+		01:47:51.052 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Closing org.springframework.context.annotation.AnnotationConfigApplicationContext@659a969b, started on Sun Jun 18 01:47:50 KST 2023
+		### BeanLifeCycle3 - close ###
+		```
+	+ **@PostConstruct, @PreDestroy 어노테이션**
+		+ 스프링에서 가장 권장하는 방식
+		+ `javax` 패키지여서 스프링에서만 사용 가능한건 아님
+		+ 외부 라이브러리에는 적용하지 못함
+		```
+		package hello.core.lifecycle;
 
-> @Autowired 주입할 대상 찾는 순서
-> 1. 타입
-> 2. 스프링 빈 이름
-> 3. @Qualifier로 지정된 이름
-> 4. @Primary
-
+		import javax.annotation.PostConstruct;
+		import javax.annotation.PreDestroy;
+		
+		public class BeanLifeCycle4 {
+		
+		    private String name;
+		
+		    public BeanLifeCycle4() {
+		        System.out.println("### BeanLifeCycle4 생성자 호출 ###");
+		        init();
+		    }
+		
+		    public void setName(String name) {
+		        this.name = name;
+		    }
+		
+		    @PostConstruct
+		    public void init() {
+		        System.out.println("### BeanLifeCycle4 - init ###");
+		        System.out.println("name = " + name);
+		    }
+		
+		    @PreDestroy
+		    public void close() {
+		        System.out.println("### BeanLifeCycle4 - close ###");
+		    }
+		}
+		```
+		```
+		@Bean  
+		public BeanLifeCycle4 beanLifeCycle4() {  
+			BeanLifeCycle4 beanLifeCycle4 = new BeanLifeCycle4();  
+			beanLifeCycle4.setName("beanLifeCycle4");  
+			return beanLifeCycle4;  
+		}
+		```
+		```
+		@Test  
+		@DisplayName("@PostConstruct, @PreDestroy")  
+		public void lifeCycleTest4() {  
+			ConfigurableApplicationContext ac = new AnnotationConfigApplicationContext(LifeCycleConfig.class);  
+			BeanLifeCycle4 beanLifeCycle4 = ac.getBean(BeanLifeCycle4.class);  
+			ac.close();  
+		}
+		[실행결과]
+		### BeanLifeCycle4 생성자 호출 ###
+		### BeanLifeCycle4 - init ###
+		name = null
+		### BeanLifeCycle4 - init ###
+		name = beanLifeCycle4
+		01:50:40.755 [main] DEBUG org.springframework.context.annotation.AnnotationConfigApplicationContext - Closing org.springframework.context.annotation.AnnotationConfigApplicationContext@659a969b, started on Sun Jun 18 01:50:40 KST 2023
+		### BeanLifeCycle4 - close ###
+		```
 
 #### 출처(참고문헌)
 + 스프링핵심원리
-+ https://docs.spring.io/spring-framework/docs/current/javadoc-api/org/springframework/beans/factory/annotation/Autowired.html
-+ https://n1tjrgns.tistory.com/163
 
 #### 연결문서
-+ 006_컴포넌트스캔
++ 007_의존관계자동주입
 
 #### 각주
