7주차 결과물 수정

--- a/7주차/7주차_박은주.md
+++ b/7주차/7주차_박은주.md
@@ -8,26 +8,24 @@ aliases: []
 ---
 
 #### 목차
-+ 빈 생명주기 콜백 시작
-+ 인터페이스 InitializingBean, DisposableBean
-+ 빈 등록 초기화, 소멸 메소드
-+ 어노테이션 @PostConstruct, @PreDestory
++ 스프링 빈 생명주기
++ 스프링 빈 콜백 방법
 
 #### 학습내용
 1. 스프링 빈 생명주기
 
-	![스프링빈생명주기](https://blog.kakaocdn.net/dn/lBNdx/btrcoldVzXF/iWE28PSS8u363k6EsrWMx1/img.png)
+	![스프링빈생명주기](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FCUg9G%2Fbtsk8ZgYuEY%2F1zQJIyKud9IclFbX4n2341%2Fimg.png)
 
-	+ **스프링 컨테이너 생성**
-	+ **스프링 빈 생성 의존관계 주입**
-	+ **초기화 콜백 사용**
+	+ 스프링 컨테이너 생성
+	+ 스프링 빈 생성 및 의존관계 주입
+	+ **초기화 콜백**
+		+ 빈이 생성 및 의존관계 주입이 완료되어서 해당 빈을 사용 할 수 있다고 알려주는 것
+	+ 사용
 	+ **소멸전 콜백**
-	+ **스프링 종료**
+		+ 빈이 소멸되기 직전에 호출
+	+ 스프링 컨테이너 종료
 
-> + 초기화 콜백: 빈이 생성되고, 빈의 의존관계 주입이 완료된 후 호출 
-> + 소멸전 콜백: 빈이 소멸되기 직전에 호출
-
-2. 스프링 빈 생명주기 콜백 방법
+2. 스프링 빈 콜백 방법
 	+ 인터페이스 InitializingBean, DisposableBean
 		+ 스프링에서만 사용 할 수 있음
 		+ 스프링 초창기에 나오는 방법으로 지금은 거의 사용하지 않는 방법
