--- a/8주차/8주차_박은주.md
+++ b/8주차/8주차_박은주.md
@@ -24,6 +24,7 @@ aliases: []
 	+ 요청이 들어올때 마다 빈을 새로 생성하여 반환함
 	+ 빈을 생성, 의존관계 주입, 초기화까지만 진행함
 	+ **소멸전 콜백이 호출되지 않음**
+    + `@Scope("prototype")`
 	```
 	public class PrototypeBeanTest {
 	    @Scope("prototype")
@@ -74,7 +75,8 @@ aliases: []
 	+ 웹 환경에서만 동작함
 	+ 싱글톤 빈과 동일하게 작동하며 해당 스코프의 소멸전 콜백까지 호출함
 	+ 종류
-		+ request 
+		+ request
+            + `@Scope("request")`
 			+ HTTP 요청이 들어오고 나갈때까지 유지
 			+ 요청마다 별도의 스코프가 생성되고 관리됨
 		+ session
