--- a/7주차/7주차_박은주.md
+++ b/7주차/7주차_박은주.md
@@ -56,13 +56,17 @@ aliases: []
 		    public void close() {
 		        System.out.println("### BeanLifeCycle2 - close ###");
 		    }
-		
+			/**
+             * 초기화 콜백
+             */
 		    @Override
 		    public void afterPropertiesSet() throws Exception {
 		        System.out.println("### BeanLifeCycle2 - afterPropertiesSet ###");
 		        init();
 		    }
-		
+		   /**
+             * 소멸전 콜백
+             */
 		    @Override
 		    public void destroy() throws Exception {
 		        System.out.println("### BeanLifeCycle2 - destroy ###");
@@ -123,7 +127,7 @@ aliases: []
 		    public void setName(String name) {
 		        this.name = name;
 		    }
-		
+		   
 		    public void init() {
 		        System.out.println("### BeanLifeCycle3 - init ###");
 		        System.out.println("name = " + name);
